# Gtkmm-Examples

./: .gitignore
PasswordGenerator/: CMakeLists.txt  README.md
PasswordGenerator/lib/: CMakeLists.txt  password-generator.cpp  password-generator.hpp
PasswordGenerator/resources/: gresources.xml  main-window.glade
PasswordGenerator/src/: CMakeLists.txt  main-window.cpp  main-window.hpp  main.cpp
PersonalCRM/: CMakeLists.txt  README.md
PersonalCRM/lib/: CMakeLists.txt  employee.cpp  employee.hpp  personal-crm.cpp  personal-crm.hpp  readers.cpp  readers.hpp  writers.cpp  writers.hpp
PersonalCRM/resources/: gresources.xml  main-window.glade
PersonalCRM/src/: CMakeLists.txt  main-window.cpp  main-window.hpp  main.cpp
